root list item spacing fixed

--- a/css/index.less
+++ b/css/index.less
@@ -74,14 +74,14 @@ h1 {
         padding-left: 20px;
         list-style: none;
 
-        li {
-            //.clearfix;
-            clear: both;
-            line-height: @file-height;
-            &:hover {
-                // background-color: rgba( 0, 121, 107, 0.7 );
-                background-color: fade( @brand-color, 10% );
-            }
+    }
+    li {
+        //.clearfix;
+        clear: both;
+        line-height: @file-height;
+        &:hover {
+            // background-color: rgba( 0, 121, 107, 0.7 );
+            background-color: fade( @brand-color, 8% );
         }
     }
 
